--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,12 @@
 @import "./partials/base";
 
+@mixin flexbox ($flexDirection, $justifyContent, $alignItems){
+    display:flex;
+    flex-direction: $flexDirection;
+    justify-content:$justifyContent;
+    align-items:$alignItems;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -8,10 +15,11 @@
 
 body{
     background-color: $fondo;
+    font-family: 'Open Sans', sans-serif;
 
     nav{
         width:100%;
-        height: 70px;
+        height: 66px;
         background-image: url("../img/flag.jpg");
         background-repeat: repeat-x;
         background-size: 5%;
@@ -20,15 +28,44 @@ body{
         position: sticky;
         top:0px;
         z-index: 1;
+        -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
+        -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
+        box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
+        @include flexbox(row, center, center);
+
+        input{
+            width: 38%;
+            height: 30px;
+            background-color: $contenedor;
+            color: black;
+            border: none;
+            text-transform: uppercase;
+            font-size: 14px;
+            padding-left: 10px;
+
+        }
 
         .logo{
-            width: 25%;
-            padding:25px;
+            width: 26%;
+            position: fixed;
+            top: 25px;
+            left: 25px;
 
             img{
                 width:100%;
             }
         }
+    }
+    .contenedor{
+        width:70%;
+        height: 100vh;
+        margin: 0 auto 0 auto;
+        background-color: $contenedor;
+        -webkit-box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
+        -moz-box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
+        box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
+
+        
     }
 
 }
