--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,71 +1,105 @@
 @import "./partials/base";
 
 @mixin flexbox ($flexDirection, $justifyContent, $alignItems){
-    display:flex;
-    flex-direction: $flexDirection;
-    justify-content:$justifyContent;
-    align-items:$alignItems;
+  display:flex;
+  flex-direction: $flexDirection;
+  justify-content:$justifyContent;
+  align-items:$alignItems;
 }
 
 *{
-    margin: 0;
-    padding: 0;
-
+  margin: 0;
+  padding: 0;
+  list-style:none;
+  box-sizing: border-box;
 }
 
 body{
-    background-color: $fondo;
-    font-family: 'Open Sans', sans-serif;
+  background-color: $fondo;
+  font-family: 'Open Sans', sans-serif;
 
-    nav{
-        width:100%;
-        height: 66px;
-        background-image: url("../img/flag.jpg");
-        background-repeat: repeat-x;
-        background-size: 5%;
-        margin:0;
-        position: -webkit-sticky;
-        position: sticky;
-        top:0px;
-        z-index: 1;
-        -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
-        -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
-        box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
-        @include flexbox(row, center, center);
+  nav{
+    width:100%;
+    height: 66px;
+    background-image: url("../img/flag.jpg");
+    background-repeat: repeat-x;
+    background-size: 5%;
+    margin:0;
+    position: -webkit-sticky;
+    position: sticky;
+    top:0px;
+    z-index: 1;
+    -webkit-box-shadow: 0px 1px 5px 0px $sombra;
+    -moz-box-shadow: 0px 1px 5px 0px $sombra;
+    box-shadow: 0px 1px 5px 0px $sombra;
+    @include flexbox(row, center, center);
 
-        input{
-            width: 38%;
-            height: 30px;
-            background-color: $contenedor;
-            color: black;
-            border: none;
-            text-transform: uppercase;
-            font-size: 14px;
-            padding-left: 10px;
+    input{
+      width: 38%;
+      height: 30px;
+      background-color: $contenedor;
+      color: $secundario;
+      border: none;
+      text-transform: uppercase;
+      font-size: 14px;
+      padding-left: 10px;
+      }
 
+      .logo{
+        width: 26%;
+        position: fixed;
+        top: 25px;
+        left: 25px;
+
+        img{
+          width:100%;
         }
+      }
+  }
+  .contenedor{
+    width:70%;
+    height: 100vh;
+    margin: 0 auto 0 auto;
+    background-color: $contenedor;
+    padding-top: 30px;
+    -webkit-box-shadow: 2px 0px 5px 0px $sombra;
+    -moz-box-shadow: 2px 0px 5px 0px $sombra;
+    box-shadow: 2px 0px 5px 0px $sombra;    
+    
+    .botonera{
+      width: 100%;
+      height: 50px;
+      @include flexbox(row, center, center);
 
-        .logo{
-            width: 26%;
-            position: fixed;
-            top: 25px;
-            left: 25px;
+      li{
+        width: 160px;
+        height: 35px;
+        padding: 3px;
+        color:$contenedor;
+        font-size: 14px;
+        text-transform: uppercase;
+        @include flexbox(row, center, center)
+      }
 
-            img{
-                width:100%;
-            }
-        }
+      li:first-child{
+        background-color: $fondo;
+        border-radius: 10px 0px 0px 10px;
+        -moz-border-radius: 10px 0px 0px 10px;
+        -webkit-border-radius: 10px 0px 0px 10px;
+        -webkit-box-shadow: 1px 0px 5px 0px $sombra;
+        -moz-box-shadow: 1px 0px 5px 0px $sombra;
+        box-shadow: 1px 0px 3px 0px $sombra;
+      }
+
+      li:last-child{
+        background-color: $secundario;
+        border-radius: 0px 10px 10px 0px;
+        -moz-border-radius: 0px 10px 10px 0px;
+        -webkit-border-radius: 0px 10px 10px 0px;
+        -webkit-box-shadow: 1px 0px 5px 0px $sombra;
+        -moz-box-shadow: 1px 0px 5px 0px $sombra;
+        box-shadow: 1px 0px 3px 0px $sombra;    
+      }
     }
-    .contenedor{
-        width:70%;
-        height: 100vh;
-        margin: 0 auto 0 auto;
-        background-color: $contenedor;
-        -webkit-box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
-        -moz-box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
-        box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.49);
-
-        
-    }
-
+  }
 }
