--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,14 +2,16 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-/* line 16, ../sass/style.scss */
+/* line 17, ../sass/style.scss */
 body {
   background-color: #f840a1;
   font-family: 'Open Sans', sans-serif;
 }
-/* line 20, ../sass/style.scss */
+/* line 21, ../sass/style.scss */
 body nav {
   width: 100%;
   height: 66px;
@@ -29,7 +31,7 @@ body nav {
   justify-content: center;
   align-items: center;
 }
-/* line 36, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 body nav input {
   width: 38%;
   height: 30px;
@@ -57,7 +59,50 @@ body .contenedor {
   height: 100vh;
   margin: 0 auto 0 auto;
   background-color: white;
+  padding-top: 30px;
   -webkit-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
+}
+/* line 69, ../sass/style.scss */
+body .contenedor .botonera {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+/* line 74, ../sass/style.scss */
+body .contenedor .botonera li {
+  width: 160px;
+  height: 35px;
+  padding: 3px;
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+/* line 84, ../sass/style.scss */
+body .contenedor .botonera li:first-child {
+  background-color: #f840a1;
+  border-radius: 10px 0px 0px 10px;
+  -moz-border-radius: 10px 0px 0px 10px;
+  -webkit-border-radius: 10px 0px 0px 10px;
+  -webkit-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
+  box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
+}
+/* line 94, ../sass/style.scss */
+body .contenedor .botonera li:last-child {
+  background-color: black;
+  border-radius: 0px 10px 10px 0px;
+  -moz-border-radius: 0px 10px 10px 0px;
+  -webkit-border-radius: 0px 10px 10px 0px;
+  -webkit-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
+  box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
