--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,3 +103,47 @@ body{
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+
+  
+body{
+
+  nav{
+    height: 32px;
+
+    input{
+      width: 50%;
+      height: 25px;
+      font-size: 12px;
+      padding-left: 5px;
+      }
+
+      .logo{
+        width: 22%;
+        top: 15px;
+        left: 10px;
+      }
+  }
+  .contenedor{
+    width:80%;
+    padding-top: 20px;
+    -webkit-box-shadow: 2px 0px 5px 0px $sombra;
+    -moz-box-shadow: 2px 0px 5px 0px $sombra;
+    box-shadow: 2px 0px 5px 0px $sombra;    
+    
+    .botonera{
+      width: 100%;
+      height: 50px;
+      @include flexbox(row, center, center);
+
+      li{
+        width: 150px;
+        height: 30px;
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+}
