--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -106,3 +106,46 @@ body .contenedor .botonera li:last-child {
   -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
+
+@media screen and (max-width: 768px) {
+  /* line 112, ../sass/style.scss */
+  body nav {
+    height: 32px;
+  }
+  /* line 115, ../sass/style.scss */
+  body nav input {
+    width: 50%;
+    height: 25px;
+    font-size: 12px;
+    padding-left: 5px;
+  }
+  /* line 122, ../sass/style.scss */
+  body nav .logo {
+    width: 22%;
+    top: 15px;
+    left: 10px;
+  }
+  /* line 128, ../sass/style.scss */
+  body .contenedor {
+    width: 80%;
+    padding-top: 20px;
+    -webkit-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
+    -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
+    box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
+  }
+  /* line 135, ../sass/style.scss */
+  body .contenedor .botonera {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  /* line 140, ../sass/style.scss */
+  body .contenedor .botonera li {
+    width: 150px;
+    height: 30px;
+    font-size: 12px;
+  }
+}
