--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,7 +56,7 @@ body{
         }
       }
   }
-  .contenedor{
+  .fondo{
     width:70%;
     height: 100vh;
     margin: 0 auto 0 auto;
@@ -102,6 +102,17 @@ body{
       }
     }
   }
+
+  .seasons{
+    width: 100%;
+    padding: 30px 25px 10px 25px;
+    background-color: red;
+
+    h2{
+      
+    }
+  }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -125,7 +136,7 @@ body{
         left: 10px;
       }
   }
-  .contenedor{
+  .fondo{
     width:80%;
     padding-top: 20px;
     -webkit-box-shadow: 2px 0px 5px 0px $sombra;
