--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ body{
     }
   }
 
-  .seasons{
+  .temporadas{
     width: 100%;
     padding: 30px 25px 10px 25px;
 
@@ -114,44 +114,49 @@ body{
       margin:0;
     }
 
-    ul{
-      width: 100%;
-      @include flexbox(row, flex-start, flex-start);
-      flex-wrap: wrap;
+    .cadaTemporada{
 
-      li{
-        width: 20%;
-        padding: 30px;
-        @include flexbox(column, space-between, center);
+      margin-bottom: 20px;
 
-        img{
-          width:100%;
-          height:auto;
-          cursor: pointer;
-          -webkit-transition:-webkit-transform 1s ease-out;
-          -moz-transition:-moz-transform 1s ease-out;
-          -o-transition:-o-transform 1s ease-out;
-          -ms-transition:-ms-transform 1s ease-out;
-          transition:transform 1s ease-out;
-          }
-          img:hover{
-            -moz-transform: scale(1.1);
-            -webkit-transform: scale(1.1);
-            -o-transform: scale(1.1);
-            -ms-transform: scale(1.1);
-            transform: scale(1.1)
-          }
-          .nombre{
-            width: 100%;
-            font-size:14px;
-            color: $secundario;
-            margin-top:10px;
-            text-transform:capitalize;
-            text-align: left;
+      ul{
+        width: 100%;
+        @include flexbox(row, flex-start, flex-start);
+        flex-wrap: wrap;
+
+        li{
+          width: 20%;
+          padding: 30px;
+          @include flexbox(column, space-between, center);
+
+          img{
+            width:100%;
+            height:auto;
+            cursor: pointer;
+            -webkit-transition:-webkit-transform 1s ease-out;
+            -moz-transition:-moz-transform 1s ease-out;
+            -o-transition:-o-transform 1s ease-out;
+            -ms-transition:-ms-transform 1s ease-out;
+            transition:transform 1s ease-out;
+            }
+            img:hover{
+              -moz-transform: scale(1.1);
+              -webkit-transform: scale(1.1);
+              -o-transform: scale(1.1);
+              -ms-transform: scale(1.1);
+              transform: scale(1.1)
+            }
+            .nombre{
+              width: 100%;
+              font-size:14px;
+              color: $secundario;
+              margin-top:10px;
+              text-transform:capitalize;
+              text-align: left;
+            }
+
+          } 
         }
-
-      }
-    }
+       }
   }
 
 }
