--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -106,12 +106,12 @@ body .fondo .botonera li:last-child {
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
 /* line 105, ../sass/style.scss */
-body .seasons {
+body .temporadas {
   width: 100%;
   padding: 30px 25px 10px 25px;
 }
 /* line 109, ../sass/style.scss */
-body .seasons h2 {
+body .temporadas h2 {
   font-size: 22px;
   font-weight: 700;
   color: black;
@@ -119,7 +119,11 @@ body .seasons h2 {
   margin: 0;
 }
 /* line 117, ../sass/style.scss */
-body .seasons ul {
+body .temporadas .cadaTemporada {
+  margin-bottom: 20px;
+}
+/* line 121, ../sass/style.scss */
+body .temporadas .cadaTemporada ul {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -127,8 +131,8 @@ body .seasons ul {
   align-items: flex-start;
   flex-wrap: wrap;
 }
-/* line 122, ../sass/style.scss */
-body .seasons ul li {
+/* line 126, ../sass/style.scss */
+body .temporadas .cadaTemporada ul li {
   width: 20%;
   padding: 30px;
   display: flex;
@@ -136,8 +140,8 @@ body .seasons ul li {
   justify-content: space-between;
   align-items: center;
 }
-/* line 127, ../sass/style.scss */
-body .seasons ul li img {
+/* line 131, ../sass/style.scss */
+body .temporadas .cadaTemporada ul li img {
   width: 100%;
   height: auto;
   cursor: pointer;
@@ -147,16 +151,16 @@ body .seasons ul li img {
   -ms-transition: -ms-transform 1s ease-out;
   transition: transform 1s ease-out;
 }
-/* line 137, ../sass/style.scss */
-body .seasons ul li img:hover {
+/* line 141, ../sass/style.scss */
+body .temporadas .cadaTemporada ul li img:hover {
   -moz-transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -o-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
 }
-/* line 144, ../sass/style.scss */
-body .seasons ul li .nombre {
+/* line 148, ../sass/style.scss */
+body .temporadas .cadaTemporada ul li .nombre {
   width: 100%;
   font-size: 14px;
   color: black;
@@ -166,24 +170,24 @@ body .seasons ul li .nombre {
 }
 
 @media screen and (max-width: 768px) {
-  /* line 164, ../sass/style.scss */
+  /* line 169, ../sass/style.scss */
   body nav {
     height: 32px;
   }
-  /* line 167, ../sass/style.scss */
+  /* line 172, ../sass/style.scss */
   body nav input {
     width: 50%;
     height: 25px;
     font-size: 12px;
     padding-left: 5px;
   }
-  /* line 174, ../sass/style.scss */
+  /* line 179, ../sass/style.scss */
   body nav .logo {
     width: 22%;
     top: 15px;
     left: 10px;
   }
-  /* line 180, ../sass/style.scss */
+  /* line 185, ../sass/style.scss */
   body .fondo {
     width: 80%;
     padding-top: 20px;
@@ -191,7 +195,7 @@ body .seasons ul li .nombre {
     -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   }
-  /* line 187, ../sass/style.scss */
+  /* line 192, ../sass/style.scss */
   body .fondo .botonera {
     width: 100%;
     height: 50px;
@@ -200,7 +204,7 @@ body .seasons ul li .nombre {
     justify-content: center;
     align-items: center;
   }
-  /* line 192, ../sass/style.scss */
+  /* line 197, ../sass/style.scss */
   body .fondo .botonera li {
     width: 150px;
     height: 30px;
