--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,7 +77,20 @@ body{
         color:$contenedor;
         font-size: 14px;
         text-transform: uppercase;
-        @include flexbox(row, center, center)
+        @include flexbox(row, center, center);
+        -webkit-transition:-webkit-transform 0.30s ease-out;
+        -moz-transition:-moz-transform 0.30s ease-out;
+        -o-transition:-o-transform 0.30s ease-out;
+        -ms-transition:-ms-transform 0.30s ease-out;
+        transition:transform 0.30s ease-out;
+      }
+
+      li:hover{
+        -moz-transform: scale(1.01);
+        -webkit-transform: scale(1.01);
+        -o-transform: scale(1.01);
+        -ms-transform: scale(1.01);
+        transform: scale(1.01)
       }
 
       li:first-child{
@@ -106,17 +119,24 @@ body{
     width: 100%;
     padding: 30px 25px 10px 25px;
 
-    h2{
-      font-size:22px;
-      font-weight:700;
-      color:$secundario;
-      text-transform: capitalize;
-      margin:0;
-    }
-
     .cadaTemporada{
-
       margin-bottom: 20px;
+
+      h2{
+        font-size:22px;
+        font-weight:700;
+        color:$secundario;
+        text-transform: capitalize;
+        margin:0;
+        transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
+  
+      }
+
+      h2:hover{
+        color: $fondo;
+        font-weight: bold;
+        cursor: pointer;
+      }
 
       ul{
         width: 100%;
@@ -139,11 +159,11 @@ body{
             transition:transform 1s ease-out;
             }
             img:hover{
-              -moz-transform: scale(1.1);
-              -webkit-transform: scale(1.1);
-              -o-transform: scale(1.1);
-              -ms-transform: scale(1.1);
-              transform: scale(1.1)
+              -moz-transform: scale(1.05);
+              -webkit-transform: scale(1.05);
+              -o-transform: scale(1.05);
+              -ms-transform: scale(1.05);
+              transform: scale(1.05)
             }
             .nombre{
               width: 100%;
@@ -152,7 +172,15 @@ body{
               margin-top:10px;
               text-transform:capitalize;
               text-align: left;
+              transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
             }
+
+            .nombre:hover{
+              color: $fondo;
+              font-weight: bold;
+              cursor: pointer;
+            }
+
 
           } 
         }
