--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -84,8 +84,21 @@ body .fondo .botonera li {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  -webkit-transition: -webkit-transform 0.30s ease-out;
+  -moz-transition: -moz-transform 0.30s ease-out;
+  -o-transition: -o-transform 0.30s ease-out;
+  -ms-transition: -ms-transform 0.30s ease-out;
+  transition: transform 0.30s ease-out;
 }
-/* line 83, ../sass/style.scss */
+/* line 88, ../sass/style.scss */
+body .fondo .botonera li:hover {
+  -moz-transform: scale(1.01);
+  -webkit-transform: scale(1.01);
+  -o-transform: scale(1.01);
+  -ms-transform: scale(1.01);
+  transform: scale(1.01);
+}
+/* line 96, ../sass/style.scss */
 body .fondo .botonera li:first-child {
   background-color: #f840a1;
   border-radius: 10px 0px 0px 10px;
@@ -95,7 +108,7 @@ body .fondo .botonera li:first-child {
   -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
-/* line 93, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 body .fondo .botonera li:last-child {
   background-color: black;
   border-radius: 0px 10px 10px 0px;
@@ -105,24 +118,31 @@ body .fondo .botonera li:last-child {
   -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
-/* line 105, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 body .temporadas {
   width: 100%;
   padding: 30px 25px 10px 25px;
 }
-/* line 109, ../sass/style.scss */
-body .temporadas h2 {
+/* line 122, ../sass/style.scss */
+body .temporadas .cadaTemporada {
+  margin-bottom: 20px;
+}
+/* line 125, ../sass/style.scss */
+body .temporadas .cadaTemporada h2 {
   font-size: 22px;
   font-weight: 700;
   color: black;
   text-transform: capitalize;
   margin: 0;
+  transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
 }
-/* line 117, ../sass/style.scss */
-body .temporadas .cadaTemporada {
-  margin-bottom: 20px;
+/* line 135, ../sass/style.scss */
+body .temporadas .cadaTemporada h2:hover {
+  color: #f840a1;
+  font-weight: bold;
+  cursor: pointer;
 }
-/* line 121, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 body .temporadas .cadaTemporada ul {
   width: 100%;
   display: flex;
@@ -131,7 +151,7 @@ body .temporadas .cadaTemporada ul {
   align-items: flex-start;
   flex-wrap: wrap;
 }
-/* line 126, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 body .temporadas .cadaTemporada ul li {
   width: 20%;
   padding: 30px;
@@ -140,7 +160,7 @@ body .temporadas .cadaTemporada ul li {
   justify-content: space-between;
   align-items: center;
 }
-/* line 131, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 body .temporadas .cadaTemporada ul li img {
   width: 100%;
   height: auto;
@@ -151,15 +171,15 @@ body .temporadas .cadaTemporada ul li img {
   -ms-transition: -ms-transform 1s ease-out;
   transition: transform 1s ease-out;
 }
-/* line 141, ../sass/style.scss */
+/* line 161, ../sass/style.scss */
 body .temporadas .cadaTemporada ul li img:hover {
-  -moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  -moz-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
-/* line 148, ../sass/style.scss */
+/* line 168, ../sass/style.scss */
 body .temporadas .cadaTemporada ul li .nombre {
   width: 100%;
   font-size: 14px;
@@ -167,27 +187,34 @@ body .temporadas .cadaTemporada ul li .nombre {
   margin-top: 10px;
   text-transform: capitalize;
   text-align: left;
+  transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
+}
+/* line 178, ../sass/style.scss */
+body .temporadas .cadaTemporada ul li .nombre:hover {
+  color: #f840a1;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
-  /* line 169, ../sass/style.scss */
+  /* line 197, ../sass/style.scss */
   body nav {
     height: 32px;
   }
-  /* line 172, ../sass/style.scss */
+  /* line 200, ../sass/style.scss */
   body nav input {
     width: 50%;
     height: 25px;
     font-size: 12px;
     padding-left: 5px;
   }
-  /* line 179, ../sass/style.scss */
+  /* line 207, ../sass/style.scss */
   body nav .logo {
     width: 22%;
     top: 15px;
     left: 10px;
   }
-  /* line 185, ../sass/style.scss */
+  /* line 213, ../sass/style.scss */
   body .fondo {
     width: 80%;
     padding-top: 20px;
@@ -195,7 +222,7 @@ body .temporadas .cadaTemporada ul li .nombre {
     -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   }
-  /* line 192, ../sass/style.scss */
+  /* line 220, ../sass/style.scss */
   body .fondo .botonera {
     width: 100%;
     height: 50px;
@@ -204,7 +231,7 @@ body .temporadas .cadaTemporada ul li .nombre {
     justify-content: center;
     align-items: center;
   }
-  /* line 197, ../sass/style.scss */
+  /* line 225, ../sass/style.scss */
   body .fondo .botonera li {
     width: 150px;
     height: 30px;
