--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -118,17 +118,17 @@ body .fondo .botonera li:last-child {
   -moz-box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.49);
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
-/* line 118, ../sass/style.scss */
-body .temporadas {
+/* line 117, ../sass/style.scss */
+body .fondo .temporadas {
   width: 100%;
   padding: 30px 25px 10px 25px;
 }
-/* line 122, ../sass/style.scss */
-body .temporadas .cadaTemporada {
+/* line 121, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada {
   margin-bottom: 20px;
 }
-/* line 125, ../sass/style.scss */
-body .temporadas .cadaTemporada h2 {
+/* line 124, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada h2 {
   font-size: 22px;
   font-weight: 700;
   color: black;
@@ -136,14 +136,14 @@ body .temporadas .cadaTemporada h2 {
   margin: 0;
   transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
 }
-/* line 135, ../sass/style.scss */
-body .temporadas .cadaTemporada h2:hover {
+/* line 134, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada h2:hover {
   color: #f840a1;
   font-weight: bold;
   cursor: pointer;
 }
-/* line 141, ../sass/style.scss */
-body .temporadas .cadaTemporada ul {
+/* line 140, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada ul {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -151,8 +151,8 @@ body .temporadas .cadaTemporada ul {
   align-items: flex-start;
   flex-wrap: wrap;
 }
-/* line 146, ../sass/style.scss */
-body .temporadas .cadaTemporada ul li {
+/* line 145, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada ul li {
   width: 20%;
   padding: 30px;
   display: flex;
@@ -160,8 +160,8 @@ body .temporadas .cadaTemporada ul li {
   justify-content: space-between;
   align-items: center;
 }
-/* line 151, ../sass/style.scss */
-body .temporadas .cadaTemporada ul li img {
+/* line 150, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada ul li img {
   width: 100%;
   height: auto;
   cursor: pointer;
@@ -172,15 +172,15 @@ body .temporadas .cadaTemporada ul li img {
   transition: transform 1s ease-out;
 }
 /* line 161, ../sass/style.scss */
-body .temporadas .cadaTemporada ul li img:hover {
+body .fondo .temporadas .cadaTemporada ul li img:hover {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
   -o-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
-/* line 168, ../sass/style.scss */
-body .temporadas .cadaTemporada ul li .nombre {
+/* line 169, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada ul li .nombre {
   width: 100%;
   font-size: 14px;
   color: black;
@@ -189,32 +189,32 @@ body .temporadas .cadaTemporada ul li .nombre {
   text-align: left;
   transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
 }
-/* line 178, ../sass/style.scss */
-body .temporadas .cadaTemporada ul li .nombre:hover {
+/* line 179, ../sass/style.scss */
+body .fondo .temporadas .cadaTemporada ul li .nombre:hover {
   color: #f840a1;
   font-weight: bold;
   cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
-  /* line 197, ../sass/style.scss */
+  /* line 195, ../sass/style.scss */
   body nav {
     height: 32px;
   }
-  /* line 200, ../sass/style.scss */
+  /* line 198, ../sass/style.scss */
   body nav input {
     width: 50%;
     height: 25px;
     font-size: 12px;
     padding-left: 5px;
   }
-  /* line 207, ../sass/style.scss */
+  /* line 205, ../sass/style.scss */
   body nav .logo {
     width: 22%;
     top: 15px;
     left: 10px;
   }
-  /* line 213, ../sass/style.scss */
+  /* line 211, ../sass/style.scss */
   body .fondo {
     width: 80%;
     padding-top: 20px;
@@ -222,7 +222,7 @@ body .temporadas .cadaTemporada ul li .nombre:hover {
     -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   }
-  /* line 220, ../sass/style.scss */
+  /* line 218, ../sass/style.scss */
   body .fondo .botonera {
     width: 100%;
     height: 50px;
@@ -231,7 +231,7 @@ body .temporadas .cadaTemporada ul li .nombre:hover {
     justify-content: center;
     align-items: center;
   }
-  /* line 225, ../sass/style.scss */
+  /* line 223, ../sass/style.scss */
   body .fondo .botonera li {
     width: 150px;
     height: 30px;
