--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -119,16 +119,13 @@ body .fondo .botonera li:last-child {
   box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.49);
 }
 /* line 117, ../sass/style.scss */
-body .fondo .temporadas {
+body .fondo .cadaTemporada {
   width: 100%;
   padding: 30px 25px 10px 25px;
-}
-/* line 121, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada {
   margin-bottom: 20px;
 }
-/* line 124, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada h2 {
+/* line 122, ../sass/style.scss */
+body .fondo .cadaTemporada h2 {
   font-size: 22px;
   font-weight: 700;
   color: black;
@@ -136,14 +133,14 @@ body .fondo .temporadas .cadaTemporada h2 {
   margin: 0;
   transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
 }
-/* line 134, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada h2:hover {
+/* line 132, ../sass/style.scss */
+body .fondo .cadaTemporada h2:hover {
   color: #f840a1;
   font-weight: bold;
   cursor: pointer;
 }
-/* line 140, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul {
+/* line 138, ../sass/style.scss */
+body .fondo .cadaTemporada ul {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -151,8 +148,8 @@ body .fondo .temporadas .cadaTemporada ul {
   align-items: flex-start;
   flex-wrap: wrap;
 }
-/* line 145, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul li {
+/* line 143, ../sass/style.scss */
+body .fondo .cadaTemporada ul li {
   width: 20%;
   padding: 30px;
   display: flex;
@@ -160,10 +157,14 @@ body .fondo .temporadas .cadaTemporada ul li {
   justify-content: space-between;
   align-items: center;
 }
-/* line 150, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul li img {
+/* line 148, ../sass/style.scss */
+body .fondo .cadaTemporada ul li .img {
+  height: 150px;
+  overflow: hidden;
+}
+/* line 153, ../sass/style.scss */
+body .fondo .cadaTemporada ul li .img img {
   width: 100%;
-  height: auto;
   cursor: pointer;
   -webkit-transition: -webkit-transform 1s ease-out;
   -moz-transition: -moz-transform 1s ease-out;
@@ -171,16 +172,16 @@ body .fondo .temporadas .cadaTemporada ul li img {
   -ms-transition: -ms-transform 1s ease-out;
   transition: transform 1s ease-out;
 }
-/* line 161, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul li img:hover {
+/* line 163, ../sass/style.scss */
+body .fondo .cadaTemporada ul li .img img:hover {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
   -o-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
-/* line 169, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul li .nombre {
+/* line 171, ../sass/style.scss */
+body .fondo .cadaTemporada ul li .nombre {
   width: 100%;
   font-size: 14px;
   color: black;
@@ -189,32 +190,32 @@ body .fondo .temporadas .cadaTemporada ul li .nombre {
   text-align: left;
   transition: color 0.5s linear 0.1s font-weight 0.5s ease-out 0.1s;
 }
-/* line 179, ../sass/style.scss */
-body .fondo .temporadas .cadaTemporada ul li .nombre:hover {
+/* line 181, ../sass/style.scss */
+body .fondo .cadaTemporada ul li .nombre:hover {
   color: #f840a1;
   font-weight: bold;
   cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
-  /* line 195, ../sass/style.scss */
+  /* line 196, ../sass/style.scss */
   body nav {
     height: 32px;
   }
-  /* line 198, ../sass/style.scss */
+  /* line 199, ../sass/style.scss */
   body nav input {
     width: 50%;
     height: 25px;
     font-size: 12px;
     padding-left: 5px;
   }
-  /* line 205, ../sass/style.scss */
+  /* line 206, ../sass/style.scss */
   body nav .logo {
     width: 22%;
     top: 15px;
     left: 10px;
   }
-  /* line 211, ../sass/style.scss */
+  /* line 212, ../sass/style.scss */
   body .fondo {
     width: 80%;
     padding-top: 20px;
@@ -222,7 +223,7 @@ body .fondo .temporadas .cadaTemporada ul li .nombre:hover {
     -moz-box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.49);
   }
-  /* line 218, ../sass/style.scss */
+  /* line 219, ../sass/style.scss */
   body .fondo .botonera {
     width: 100%;
     height: 50px;
@@ -231,28 +232,28 @@ body .fondo .temporadas .cadaTemporada ul li .nombre:hover {
     justify-content: center;
     align-items: center;
   }
-  /* line 223, ../sass/style.scss */
+  /* line 224, ../sass/style.scss */
   body .fondo .botonera li {
     width: 150px;
     height: 30px;
     font-size: 12px;
   }
-  /* line 230, ../sass/style.scss */
-  body .fondo .temporadas {
+  /* line 231, ../sass/style.scss */
+  body .fondo .cadaTemporada {
     width: 100%;
     padding: 30px 25px 10px 25px;
   }
-  /* line 238, ../sass/style.scss */
-  body .fondo .temporadas .cadaTemporada ul li {
+  /* line 237, ../sass/style.scss */
+  body .fondo .cadaTemporada ul li {
     width: 50%;
     padding: 30px;
   }
-  /* line 242, ../sass/style.scss */
-  body .fondo .temporadas .cadaTemporada ul li .nombre {
+  /* line 241, ../sass/style.scss */
+  body .fondo .cadaTemporada ul li .nombre {
     text-align: center;
   }
-  /* line 247, ../sass/style.scss */
-  body .fondo .temporadas .cadaTemporada ul li:last-child {
+  /* line 246, ../sass/style.scss */
+  body .fondo .cadaTemporada ul li:last-child {
     display: none;
   }
 }
